update gitignore, add js plugins

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-.DS_Store
-
-.sass-cache
-
-node_modules
-
-bower_components
-
+.DS_Store/
+.git/
+.sass-cache/
+node_modules/
+bower_components/
 assets/dist
-
 gulp-config.json
-
-
 npm-debug.log
